--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.1.1 Wed Jun 25 12:51:39 PDT 2014
+ - Badge pod didn't take on first release.
+
 0.1.0 Wed Jun 25 12:42:32 PDT 2014
  - First Release
  - Ported from Kwim-Plugin-badge
