--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.1.2 Sun Jul 13 22:14:29 PDT 2014
+ - Add Contributing file
+
 0.1.1 Wed Jun 25 12:51:39 PDT 2014
  - Badge pod didn't take on first release.
 
