--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.1.3 Thu Jul 17 10:44:07 PDT 2014
+ - Depend on a new swim that deps on a new Pegex
+
 0.1.2 Sun Jul 13 22:14:29 PDT 2014
  - Add Contributing file
 
