--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.1.4 Fri Aug 15 20:43:13 PDT 2014
+ - Add t/000-compile-modules.t
+
 0.1.3 Thu Jul 17 10:44:07 PDT 2014
  - Depend on a new swim that deps on a new Pegex
 
