--- a/README
+++ b/README
@@ -1,16 +1,27 @@
-NAME
-    Swim::Plugin::badge - Swim Plugin for Badges
+Name
+    Swim::Plugin::badge - Swim Badge Image Support
 
-SYNOPSIS
+Synopsis
         <badge travis coveralls githubuserid/reponame>
 
-DESCRIPTION
+Description
     Add pretty Travis and Coveralls badges to your documentation.
 
-AUTHOR
+Author
+    Ingy döt Net
+
+Copyright and License
+    Copyright 2014. Ingy döt Net.
+
+    This program is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
+
+    See <http://www.perl.com/perl/misc/Artistic.html>
+
+Author
     Ingy döt Net <ingy@cpan.org>
 
-COPYRIGHT AND LICENSE
+Copyright and License
     Copyright 2014. Ingy döt Net.
 
     This program is free software; you can redistribute it and/or modify it
